--- a/src/components/LaterToday.module.css
+++ b/src/components/LaterToday.module.css
@@ -1,5 +1,7 @@
 .later {
     height: 2rem;
+    width: 100%;
+    min-width: 0;
     background-color: #e9e7e7;
     box-shadow: 0 1px 2px 1px #c7c4c4;
     display: flex;
